--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Jeremaquai's Portfololio</title>
+    <!-- Font Awesome script -->
+    <script src="https://kit.fontawesome.com/637944381a.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
